# zeromq-websockets-example

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.json
cmake/: FindZeroMQ.cmake.bak  FindZeroMQ.cmake.in
src/cpp/: main.cpp
src/js/: JSMQ.js  JSMQ_example.html  index.ts  package.json  tsconfig.json  webpack.config.js  webpack.config.ts
src/js/app/: tsconfig.json
src/js/app/main/: MainProcess.ts  index.ts  tsconfig.json
src/js/app/renderer/: index.ejs  index.tsx  store.ts  tsconfig.json
src/js/app/renderer/components/: App.tsx
src/js/app/renderer/reducers/: index.ts
src/js/misc/: index.ts  tsconfig.json
src/js/scripts/: postinstall.js  vars.js
